# pallets-sphinx-themes

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CHANGES.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pre-commit.yaml  publish.yaml
docs/: conf.py  customizing.md  index.md  index.rst  installation.md  setup.md
docs/_templates/: octicon.html
pallets_sphinx_themes/: __init__.py  theme_check.py  versions.py
pallets_sphinx_themes/babel/: sidebarintro.html  sidebarlogo.html
pallets_sphinx_themes/click/: sidebarintro.html  sidebarlogo.html
pallets_sphinx_themes/click/static/: click.css
pallets_sphinx_themes/flask-sqlalchemy/static/: flask-sqlalchemy.css
pallets_sphinx_themes/flask/static/: flask.css
pallets_sphinx_themes/jinja/: theme.conf
pallets_sphinx_themes/jinja/static/: jinja.css
pallets_sphinx_themes/platter/static/: platter.css
pallets_sphinx_themes/pocoo/: __init__.py  layout.html  theme.conf  versions.html
pallets_sphinx_themes/pocoo/static/: pocoo.css_t
pallets_sphinx_themes/werkzeug/static/: werkzeug.css
pocoo_sphinx_themes/: __init__.py
pocoo_sphinx_themes/flask/: search.html  sidebarintro.html
pocoo_sphinx_themes/flask-sqlalchemy/: sidebarintro.html  sidebarlogo.html  theme.conf
pocoo_sphinx_themes/flask/static/: flask.css
pocoo_sphinx_themes/jinja/: __init__.py  search.html
pocoo_sphinx_themes/platter/: search.html  sidebarlogo.html
pocoo_sphinx_themes/platter/static/: platter.css
pocoo_sphinx_themes/pocoo/: layout.html  theme.conf
pocoo_sphinx_themes/werkzeug/: search.html  sidebarintro.html
pocoo_sphinx_themes/werkzeug/static/: werkzeug.css
requirements/: dev.in  dev.txt  docs.txt
src/pallets_sphinx_themes/: __init__.py  theme_check.py  versions.py
src/pallets_sphinx_themes/pocoo/: theme.conf
src/pallets_sphinx_themes/themes/babel/static/: babel.css
src/pallets_sphinx_themes/themes/click/: __init__.py  domain.py  theme.conf
src/pallets_sphinx_themes/themes/click/static/: click.css
src/pallets_sphinx_themes/themes/flask-sqlalchemy/: sidebarlogo.html
src/pallets_sphinx_themes/themes/flask/static/: flask.css
src/pallets_sphinx_themes/themes/jinja/: __init__.py  domain.py  sidebarintro.html
src/pallets_sphinx_themes/themes/jinja/static/: jinja.css
src/pallets_sphinx_themes/themes/platter/: sidebarintro.html
src/pallets_sphinx_themes/themes/platter/static/: platter.css
src/pallets_sphinx_themes/themes/pocoo/: __init__.py  layout.html  theme.conf  theme.html
src/pallets_sphinx_themes/themes/pocoo/static/: pocoo.css  theme.js
src/pallets_sphinx_themes/themes/werkzeug/static/: werkzeug.css
src/pallets_sphinx_themes/werkzeug/static/: werkzeug.css
