[metadata]
license_file = LICENSE.rst

[bdist_wheel]
universal = True

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
# E203 = slice notation whitespace, invalid
# E501 = line length, handled by bugbear B950
# W503 = bin op line break, invalid
ignore = E203, E501, W503
# up to 88 allowed by bugbear B950
max-line-length = 80
