[metadata]
name = Pallets-Sphinx-Themes
version = 1.2.2
url = https://sphinx-themes.palletsprojects.com/
project_urls =
    Documentation = https://sphinx-themes.palletsprojects.com/
    Code = https://github.com/pallets/pallets-sphinx-themes
    Issue tracker = https://github.com/pallets/pallets-sphinx-themes/issues
license = BSD-3-Clause
license_file = LICENSE.rst
author = Pallets
author_email = contact@palletsprojects.com
description = Sphinx themes for Pallets and related projects.
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Sphinx
    Framework :: Sphinx :: Theme
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation

[options]
packages = find:
package_dir =
    = src
include_package_data = true
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    importlib-metadata
    packaging
    Sphinx

[options.packages.find]
where = src

[options.entry_points]
pygments.styles =
    pocoo = pallets_sphinx_themes.themes.pocoo:PocooStyle
    jinja = pallets_sphinx_themes.themes.jinja:JinjaStyle

[bdist_wheel]
universal = true

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
