[metadata]
name = Pallets-Sphinx-Themes
version = 2.0.2
url = https://github.com/pallets/pallets-sphinx-themes/
project_urls =
    Donate = https://palletsprojects.com/donate
    Source Code = https://github.com/pallets/pallets-sphinx-themes/
    Issue Tracker = https://github.com/pallets/pallets-sphinx-themes/issues/
    Twitter = https://twitter.com/PalletsTeam
    Chat = https://discord.gg/pallets
license = BSD-3-Clause
license_files = LICENSE.rst
author = Pallets
author_email = contact@palletsprojects.com
description = Sphinx themes for Pallets and related projects.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Sphinx
    Framework :: Sphinx :: Theme
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
pygments.styles =
    pocoo = pallets_sphinx_themes.themes.pocoo:PocooStyle
    jinja = pallets_sphinx_themes.themes.jinja:JinjaStyle

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = true
source =
    pallets_sphinx_themes
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions,
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80

[mypy]
files = src/pallets_sphinx_themes
python_version = 3.6
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
